Ensure the local variable into which we read Truetype cmap table data (platform ID, encoding ID etc) is actually large enough to hold all the data we read into it.

Bug 691452 (part 1)

No cluster differences expected.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11507 a1074d23-0009-0410-80fe-cf8c14f379e6